Updated hammer sprite and enemy images

--- a/index.html
+++ b/index.html
@@ -22,28 +22,31 @@
             game = new Phaser.Game(window.innerWidth, window.innerHeight, Phaser.AUTO, 'body', { preload: this.preload, create: this.create, update: this.update }, true);
             game.state.add('Game', WhamIt.Game);
             var enemies = {
-              ie : 'images/sprites/internet-explorer_64x64.png',
-              konqueror : 'images/sprites/konqueror_64x64.png',
-              opera : 'images/sprites/opera_64x64.png',
-              safari : 'images/sprites/safari_64x64.png',
-              dolphin : 'images/sprites/dolphin_64x64.png',
-              chrome : 'images/sprites/chrome_64x64.png',
-              chromium : 'images/sprites/chromium_64x64.png',
-              firefox : 'images/sprites/firefox_64x64.png',
+              b_ie : 'images/sprites/browser-ie.png',
+              b_opera : 'images/sprites/browser-opera.png',
+              b_safari : 'images/sprites/browser-safari.png',
+              b_chrome : 'images/sprites/browser-chrome.png',
+              b_firefox : 'images/sprites/browser-ff.png',
+              b_ns : 'images/sprites/browser-netscape.png',
+              b_g : 'images/sprites/browser-g.png',
 
-              apple_iphone : 'images/sprites/apple_iphone.png',
-              asus_m530w : 'images/sprites/asus_m530w.png',
-              asus_mypal_a626 : 'images/sprites/asus_mypal_a626.png',
-              eten_g500 : 'images/sprites/eten_g500.png',
-              eten_glofiish_m700 : 'images/sprites/eten_glofiish_m700.png',
-              htc_hermes : 'images/sprites/htc_hermes.png',
-              htc_wing : 'images/sprites/htc_wing.png',
-              iphone : 'images/sprites/iphone.png',
-              motorola_q_9m : 'images/sprites/motorola_q_9m.png',
-              palm_treo_700w : 'images/sprites/palm_treo_700w.png',
-              palm_treo_750v : 'images/sprites/palm_treo_750v.png',
-              samsung_sch_i320 : 'images/sprites/samsung_sch_i320.png',
-              samsung_sch_i760 : 'images/sprites/samsung_sch_i760.png',
+              phone_001 : 'images/sprites/phone-001.png',
+              phone_002 : 'images/sprites/phone-002.png',
+              phone_003 : 'images/sprites/phone-003.png',
+              phone_004 : 'images/sprites/phone-004.png',
+              phone_005 : 'images/sprites/phone-005.png',
+              phone_006 : 'images/sprites/phone-006.png',
+              phone_007 : 'images/sprites/phone-007.png',
+              phone_008 : 'images/sprites/phone-008.png',
+              phone_009 : 'images/sprites/phone-009.png',
+              phone_010 : 'images/sprites/phone-010.png',
+              phone_011 : 'images/sprites/phone-011.png',
+              phone_012 : 'images/sprites/phone-012.png',
+              phone_013 : 'images/sprites/phone-013.png',
+              phone_014 : 'images/sprites/phone-014.png',
+              phone_015 : 'images/sprites/phone-015.png',
+              phone_016 : 'images/sprites/phone-016.png',
+              phone_017 : 'images/sprites/phone-017.png',
             };
             WhamIt.Game.prototype.addEnemies(enemies);
 
